menambahkan inventory
