# app/Modules/Inventaris/Controllers/KategoriController.php
@@ -23,8 +23,9 @@ class KategoriController extends Controller
     {
         $perPage = PaginationHelper::perPage($request);
         $sort = PaginationHelper::sortCondition($request, PaginationHelper::SORT_DESC);
+        $keyword = $request->get('search', '');
 
-        return ResponseHelper::successWithData(KategoriService::list($perPage, $sort));
+        return ResponseHelper::successWithData(KategoriService::list($perPage, $sort, $keyword));
     }
 
     public function show(int $id): JsonResponse
