# app/Modules/Inventaris/Controllers/RakController.php
@@ -23,8 +23,9 @@ class RakController extends Controller
     {
         $perPage = PaginationHelper::perPage($request);
         $sort = PaginationHelper::sortCondition($request, PaginationHelper::SORT_DESC);
+        $keyword = $request->get('search', '');
 
-        return ResponseHelper::successWithData(RakService::list($perPage, $sort));
+        return ResponseHelper::successWithData(RakService::list($perPage, $sort, $keyword));
     }
 
     public function show(int $id): JsonResponse
